--- a/wp-content/themes/luckymoney/css/main.css
+++ b/wp-content/themes/luckymoney/css/main.css
@@ -182,8 +182,8 @@ textarea {height:auto; padding:10px 12px;}
 .cart-icon {float:left; margin-left:20px;}
 .cart-icon .cart-item {display:block; min-width:24px; height:24px; text-align:center; background:#434a54; font-size:10px; line-height:24px; color:#fff; font-weight:700; -webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%; position:absolute; right:-5px; top:-5px;}
 
-.mobiview-search {display:none; background:#cd242b; padding:0 15px; position:relative;}
-.mobiview-search i {position:absolute; right:15px; top:15px; font-size:15px; color:#fff; line-height:normal;}
+.mobiview-search {display:none; background:#cd242b; padding:0px 15px 0px 0px; position:relative; z-index: 10;}
+.mobiview-search i {position:absolute; right:15px; top:18px; font-size:15px; color:#333; line-height:normal;}
 .searchinput-mobiview {display:block; width:100%; background:#cd242b; border:none; padding:4px 30px 4px 4px; color:#fff;}
 .mobiview-search ::-webkit-input-placeholder{color:#fff; opacity:1;}
 .mobiview-search :-moz-placeholder{color:#fff; opacity:1;} /* Firefox 18- */
@@ -745,6 +745,8 @@ section.text-2 .textwidget{
 
 .title_content {
     margin: 15px 0px;
+    font-size: 19px;
+    font-weight: bold;
 }
 
 .media_entry {
@@ -754,7 +756,6 @@ section.text-2 .textwidget{
 .content small,.content small a {
     color: #999;
 }
-
 
 
 @media only screen and (max-width: 768px) {
@@ -909,6 +910,13 @@ section.text-2 .textwidget{
     #custom_html-2 {
         padding-left: 0px;
         padding-right: 0px;
+    }
+
+    .menu-mobi-view {
+        margin-top: 10px;
+    }
+    .mobiview-search {
+        line-height: 0px;
     }
 
 }
