--- a/wp-content/themes/luckymoney/css/main.css
+++ b/wp-content/themes/luckymoney/css/main.css
@@ -167,6 +167,7 @@ textarea {height:auto; padding:10px 12px;}
 .icon-round {display:block; background:#f2f4f6; width:52px; height:52px; text-align:center; font-size:15px; color:#656d78; line-height:52px; cursor:pointer; position:relative; z-index:2; -webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%; -moz-transition:all 0.4s ease 0s; -webkit-transition:all 0.4s ease 0s; transition:all 0.4s ease 0s;}
 .icon-round:hover {color:#cd242b;}
 
+
 .header-login {float:left; padding:8px 0 0;}
 .header-login ul li {float:left; margin:0 40px 0 0; padding:0;}
 .header-login ul li a {display:block; font-size:14px; color:#656d78; letter-spacing:0.025em;}
@@ -180,7 +181,7 @@ textarea {height:auto; padding:10px 12px;}
 .searchinput {display:block; width:0; padding:0; border:none; background:#f2f4f6; height:52px; font-size:14px; font-weight:400; line-height:normal; position:relative; z-index:1; -webkit-border-radius:30px;-moz-border-radius:30px;border-radius:30px; -moz-transition:all 0.4s ease 0s; -webkit-transition:all 0.4s ease 0s; transition:all 0.4s ease 0s;}
 .header-search.opened .searchinput {background-color:#f2f4f6 !important; background-image: none; width:460px; padding:5px 50px 5px 20px;}
 .cart-icon {float:left; margin-left:20px;}
-.cart-icon .cart-item {display:block; min-width:24px; height:24px; text-align:center; background:#434a54; font-size:10px; line-height:24px; color:#fff; font-weight:700; -webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%; position:absolute; right:-5px; top:-5px;}
+.cart-icon .cart-item {display:block; min-width:24px; height:24px; text-align:center; background:#cd242b; font-size:10px; line-height:24px; color:#fff; font-weight:700; -webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%; position:absolute; right:-5px; top:-5px;}
 
 .mobiview-search {display:none; background:#cd242b; padding:0px 15px 0px 0px; position:relative; z-index: 10;}
 .mobiview-search i {position:absolute; right:15px; top:18px; font-size:15px; color:#333; line-height:normal;}
@@ -221,7 +222,7 @@ textarea {height:auto; padding:10px 12px;}
 .homeslick {margin:0; padding:0; width:100%;}
 .homeslick .slick-list {background:#f5f7fa;}
 .homeslick .slick-list li {margin:0; padding:0; list-style:none; width:100%; position:relative;}
-.homeslick li img{width:100%; display:block;}
+.homeslick .img_wrap img{width:100%; display:block;}
 .homeslick .slick-arrow.slick-prev {left:45px;}
 .homeslick .slick-arrow.slick-next {right:45px;}
 .homeslick .slick-dots {display:none !important;}
@@ -722,10 +723,6 @@ section.text-2 .textwidget{
 }
 
 /* cart icon header */
-
-.cart-icon {
-    margin-top: 15px;
-}
 
 /* contact form  */
 
