--- a/wp-content/themes/luckymoney/css/main.css
+++ b/wp-content/themes/luckymoney/css/main.css
@@ -790,6 +790,82 @@ section.text-2 .textwidget{
     text-align: center;
 }
 
+
+/* support */
+
+.custom_html-3 {
+    float: left;
+}
+
+.support .box-services .media-body {
+    padding-left: 10px;
+}
+.media, .media-body {
+    overflow: hidden;
+    zoom: 1;
+}
+
+.support .box-services {
+    color: #9B9D9E;
+    display: inline-block;
+    font-size: 14px;
+    min-height: 50px;
+    min-width: 250px;
+    cursor: pointer;
+}
+
+.support .box-services span {
+    border: 1px solid #D9D9D9;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 39px;
+    position: relative;
+    text-align: center;
+    padding-left: 2px;
+    -webkit-transition: box-shadow 0.2s ease 0s;
+    transition: box-shadow 0.2s ease 0s;
+    z-index: 1;
+    background: #fff;
+}
+
+.support .box-services span i {
+    color: #5D686E;
+    font-size: 17px;
+}
+
+.support .box-services .media-body h3 {
+    line-height: 20px;
+    margin: 0;
+    padding-bottom: 4px;
+}
+
+.media-body h3, .media-body h4 {
+    font-family: "Source Sans Pro", sans-serif;
+    color: #cd242b;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.support .box-services .media-body small {
+    font-size: 14px;
+    line-height: 20px;
+}
+
+@media only screen and (max-width: 1000px) {
+    .custom_html-3 {
+        display: none;
+    }
+}
+
+/* end support */
+
 @media only screen and (max-width: 768px) {
     .woocommerce table.shop_table_responsive thead, .woocommerce-page table.shop_table_responsive thead {
         display: none
